parser/cool.output
Terminals unused in grammar

   ERROR


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class ';'
    3           | class_list class ';'
    4           | class_list error ';'
    5           | error ';'

    6 class: CLASS TYPEID '{' feature_list '}'
    7      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}'

    8 feature_list: /* empty */
    9             | feature_list feature ';'
   10             | feature_list error ';'

   11 feature: OBJECTID '(' ')' ':' TYPEID '{' expression '}'
   12        | OBJECTID '(' formal_list ')' ':' TYPEID '{' expression '}'
   13        | OBJECTID ':' TYPEID
   14        | OBJECTID ':' TYPEID ASSIGN expression

   15 formal_list: formal
   16            | formal_list ',' formal

   17 formal: OBJECTID ':' TYPEID

   18 expr_comma_list: expression
   19                | expr_comma_list ',' expression

   20 expr_semi_list: expression ';'
   21               | expr_semi_list expression ';'
   22               | expr_semi_list error ';'

   23 case: OBJECTID ':' TYPEID DARROW expression

   24 case_list: case ';'
   25          | case_list case ';'
   26          | case_list error ';'

   27 let_args: ',' OBJECTID ':' TYPEID let_args
   28         | ',' OBJECTID ':' TYPEID ASSIGN expression let_args
   29         | IN expression
   30         | error let_args

   31 expression: OBJECTID ASSIGN expression
   32           | expression '.' OBJECTID '(' expr_comma_list ')'
   33           | expression '@' TYPEID '.' OBJECTID '(' expr_comma_list ')'
   34           | OBJECTID '(' expr_comma_list ')'
   35           | IF expression THEN expression ELSE expression FI
   36           | WHILE expression LOOP expression POOL
   37           | '{' expr_semi_list '}'
   38           | LET OBJECTID ':' TYPEID let_args
   39           | LET OBJECTID ':' TYPEID ASSIGN expression let_args
   40           | LET error let_args
   41           | CASE expression OF case_list ESAC
   42           | NEW TYPEID
   43           | ISVOID expression
   44           | expression '+' expression
   45           | expression '-' expression
   46           | expression '*' expression
   47           | expression '/' expression
   48           | '~' expression
   49           | expression '<' expression
   50           | expression LE expression
   51           | expression '=' expression
   52           | NOT expression
   53           | '(' expression ')'
   54           | OBJECTID
   55           | INT_CONST
   56           | STR_CONST
   57           | BOOL_CONST


Terminals, with rules where they appear

$end (0) 0
'(' (40) 11 12 32 33 34 53
')' (41) 11 12 32 33 34 53
'*' (42) 46
'+' (43) 44
',' (44) 16 19 27 28
'-' (45) 45
'.' (46) 32 33
'/' (47) 47
':' (58) 11 12 13 14 17 23 27 28 38 39
';' (59) 2 3 4 5 9 10 20 21 22 24 25 26
'<' (60) 49
'=' (61) 51
'@' (64) 33
'{' (123) 6 7 11 12 37
'}' (125) 6 7 11 12 37
'~' (126) 48
error (256) 4 5 10 22 26 30 40
CLASS (258) 6 7
ELSE (259) 35
FI (260) 35
IF (261) 35
IN (262) 29
INHERITS (263) 7
LET (264) 38 39 40
LOOP (265) 36
POOL (266) 36
THEN (267) 35
WHILE (268) 36
CASE (269) 41
ESAC (270) 41
OF (271) 41
DARROW (272) 23
NEW (273) 42
ISVOID (274) 43
STR_CONST (275) 56
INT_CONST (276) 55
BOOL_CONST (277) 57
TYPEID (278) 6 7 11 12 13 14 17 23 27 28 33 38 39 42
OBJECTID (279) 11 12 13 14 17 23 27 28 31 32 33 34 38 39 54
ASSIGN (280) 14 28 31 39
NOT (281) 52
LE (282) 50
ERROR (283)


Nonterminals, with rules where they appear

$accept (45)
    on left: 0
program (46)
    on left: 1, on right: 0
class_list (47)
    on left: 2 3 4 5, on right: 1 3 4
class (48)
    on left: 6 7, on right: 2 3
feature_list (49)
    on left: 8 9 10, on right: 6 7 9 10
feature (50)
    on left: 11 12 13 14, on right: 9
formal_list (51)
    on left: 15 16, on right: 12 16
formal (52)
    on left: 17, on right: 15 16
expr_comma_list (53)
    on left: 18 19, on right: 19 32 33 34
expr_semi_list (54)
    on left: 20 21 22, on right: 21 22 37
case (55)
    on left: 23, on right: 24 25
case_list (56)
    on left: 24 25 26, on right: 25 26 41
let_args (57)
    on left: 27 28 29 30, on right: 27 28 30 38 39 40
expression (58)
    on left: 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48
    49 50 51 52 53 54 55 56 57, on right: 11 12 14 18 19 20 21 23 28
    29 31 32 33 35 36 39 41 43 44 45 46 47 48 49 50 51 52 53


state 0

    0 $accept: . program $end

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    program     go to state 3
    class_list  go to state 4
    class       go to state 5


state 1

    5 class_list: error . ';'

    ';'  shift, and go to state 6


state 2

    6 class: CLASS . TYPEID '{' feature_list '}'
    7      | CLASS . TYPEID INHERITS TYPEID '{' feature_list '}'

    TYPEID  shift, and go to state 7


state 3

    0 $accept: program . $end

    $end  shift, and go to state 8


state 4

    1 program: class_list .
    3 class_list: class_list . class ';'
    4           | class_list . error ';'

    error  shift, and go to state 9
    CLASS  shift, and go to state 2

    $end  reduce using rule 1 (program)

    class  go to state 10


state 5

    2 class_list: class . ';'

    ';'  shift, and go to state 11


state 6

    5 class_list: error ';' .

    $default  reduce using rule 5 (class_list)


state 7

    6 class: CLASS TYPEID . '{' feature_list '}'
    7      | CLASS TYPEID . INHERITS TYPEID '{' feature_list '}'

    INHERITS  shift, and go to state 12
    '{'       shift, and go to state 13


state 8

    0 $accept: program $end .

    $default  accept


state 9

    4 class_list: class_list error . ';'

    ';'  shift, and go to state 14


state 10

    3 class_list: class_list class . ';'

    ';'  shift, and go to state 15


state 11

    2 class_list: class ';' .

    $default  reduce using rule 2 (class_list)


state 12

    7 class: CLASS TYPEID INHERITS . TYPEID '{' feature_list '}'

    TYPEID  shift, and go to state 16


state 13

    6 class: CLASS TYPEID '{' . feature_list '}'

    $default  reduce using rule 8 (feature_list)

    feature_list  go to state 17


state 14

    4 class_list: class_list error ';' .

    $default  reduce using rule 4 (class_list)


state 15

    3 class_list: class_list class ';' .

    $default  reduce using rule 3 (class_list)


state 16

    7 class: CLASS TYPEID INHERITS TYPEID . '{' feature_list '}'

    '{'  shift, and go to state 18


state 17

    6 class: CLASS TYPEID '{' feature_list . '}'
    9 feature_list: feature_list . feature ';'
   10             | feature_list . error ';'

    error     shift, and go to state 19
    OBJECTID  shift, and go to state 20
    '}'       shift, and go to state 21

    feature  go to state 22


state 18

    7 class: CLASS TYPEID INHERITS TYPEID '{' . feature_list '}'

    $default  reduce using rule 8 (feature_list)

    feature_list  go to state 23


state 19

   10 feature_list: feature_list error . ';'

    ';'  shift, and go to state 24


state 20

   11 feature: OBJECTID . '(' ')' ':' TYPEID '{' expression '}'
   12        | OBJECTID . '(' formal_list ')' ':' TYPEID '{' expression '}'
   13        | OBJECTID . ':' TYPEID
   14        | OBJECTID . ':' TYPEID ASSIGN expression

    '('  shift, and go to state 25
    ':'  shift, and go to state 26


state 21

    6 class: CLASS TYPEID '{' feature_list '}' .

    $default  reduce using rule 6 (class)


state 22

    9 feature_list: feature_list feature . ';'

    ';'  shift, and go to state 27


state 23

    7 class: CLASS TYPEID INHERITS TYPEID '{' feature_list . '}'
    9 feature_list: feature_list . feature ';'
   10             | feature_list . error ';'

    error     shift, and go to state 19
    OBJECTID  shift, and go to state 20
    '}'       shift, and go to state 28

    feature  go to state 22


state 24

   10 feature_list: feature_list error ';' .

    $default  reduce using rule 10 (feature_list)


state 25

   11 feature: OBJECTID '(' . ')' ':' TYPEID '{' expression '}'
   12        | OBJECTID '(' . formal_list ')' ':' TYPEID '{' expression '}'

    OBJECTID  shift, and go to state 29
    ')'       shift, and go to state 30

    formal_list  go to state 31
    formal       go to state 32


state 26

   13 feature: OBJECTID ':' . TYPEID
   14        | OBJECTID ':' . TYPEID ASSIGN expression

    TYPEID  shift, and go to state 33


state 27

    9 feature_list: feature_list feature ';' .

    $default  reduce using rule 9 (feature_list)


state 28

    7 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' .

    $default  reduce using rule 7 (class)


state 29

   17 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 34


state 30

   11 feature: OBJECTID '(' ')' . ':' TYPEID '{' expression '}'

    ':'  shift, and go to state 35


state 31

   12 feature: OBJECTID '(' formal_list . ')' ':' TYPEID '{' expression '}'
   16 formal_list: formal_list . ',' formal

    ')'  shift, and go to state 36
    ','  shift, and go to state 37


state 32

   15 formal_list: formal .

    $default  reduce using rule 15 (formal_list)


state 33

   13 feature: OBJECTID ':' TYPEID .
   14        | OBJECTID ':' TYPEID . ASSIGN expression

    ASSIGN  shift, and go to state 38

    $default  reduce using rule 13 (feature)


state 34

   17 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 39


state 35

   11 feature: OBJECTID '(' ')' ':' . TYPEID '{' expression '}'

    TYPEID  shift, and go to state 40


state 36

   12 feature: OBJECTID '(' formal_list ')' . ':' TYPEID '{' expression '}'

    ':'  shift, and go to state 41


state 37

   16 formal_list: formal_list ',' . formal

    OBJECTID  shift, and go to state 29

    formal  go to state 42


state 38

   14 feature: OBJECTID ':' TYPEID ASSIGN . expression

    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56

    expression  go to state 57


state 39

   17 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 17 (formal)


state 40

   11 feature: OBJECTID '(' ')' ':' TYPEID . '{' expression '}'

    '{'  shift, and go to state 58


state 41

   12 feature: OBJECTID '(' formal_list ')' ':' . TYPEID '{' expression '}'

    TYPEID  shift, and go to state 59


state 42

   16 formal_list: formal_list ',' formal .

    $default  reduce using rule 16 (formal_list)


state 43

   35 expression: IF . expression THEN expression ELSE expression FI

    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56

    expression  go to state 60


state 44

   38 expression: LET . OBJECTID ':' TYPEID let_args
   39           | LET . OBJECTID ':' TYPEID ASSIGN expression let_args
   40           | LET . error let_args

    error     shift, and go to state 61
    OBJECTID  shift, and go to state 62


state 45

   36 expression: WHILE . expression LOOP expression POOL

    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56

    expression  go to state 63


state 46

   41 expression: CASE . expression OF case_list ESAC

    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56

    expression  go to state 64


state 47

   42 expression: NEW . TYPEID

    TYPEID  shift, and go to state 65


state 48

   43 expression: ISVOID . expression

    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56

    expression  go to state 66


state 49

   56 expression: STR_CONST .

    $default  reduce using rule 56 (expression)


state 50

   55 expression: INT_CONST .

    $default  reduce using rule 55 (expression)


state 51

   57 expression: BOOL_CONST .

    $default  reduce using rule 57 (expression)


state 52

   31 expression: OBJECTID . ASSIGN expression
   34           | OBJECTID . '(' expr_comma_list ')'
   54           | OBJECTID .

    ASSIGN  shift, and go to state 67
    '('     shift, and go to state 68

    $default  reduce using rule 54 (expression)


state 53

   52 expression: NOT . expression

    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56

    expression  go to state 69


state 54

   48 expression: '~' . expression

    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56

    expression  go to state 70


state 55

   37 expression: '{' . expr_semi_list '}'

    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56

    expr_semi_list  go to state 71
    expression      go to state 72


state 56

   53 expression: '(' . expression ')'

    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56

    expression  go to state 73


state 57

   14 feature: OBJECTID ':' TYPEID ASSIGN expression .
   32 expression: expression . '.' OBJECTID '(' expr_comma_list ')'
   33           | expression . '@' TYPEID '.' OBJECTID '(' expr_comma_list ')'
   44           | expression . '+' expression
   45           | expression . '-' expression
   46           | expression . '*' expression
   47           | expression . '/' expression
   49           | expression . '<' expression
   50           | expression . LE expression
   51           | expression . '=' expression

    LE   shift, and go to state 74
    '<'  shift, and go to state 75
    '='  shift, and go to state 76
    '+'  shift, and go to state 77
    '-'  shift, and go to state 78
    '*'  shift, and go to state 79
    '/'  shift, and go to state 80
    '@'  shift, and go to state 81
    '.'  shift, and go to state 82

    $default  reduce using rule 14 (feature)


state 58

   11 feature: OBJECTID '(' ')' ':' TYPEID '{' . expression '}'

    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56

    expression  go to state 83


state 59

   12 feature: OBJECTID '(' formal_list ')' ':' TYPEID . '{' expression '}'

    '{'  shift, and go to state 84


state 60

   32 expression: expression . '.' OBJECTID '(' expr_comma_list ')'
   33           | expression . '@' TYPEID '.' OBJECTID '(' expr_comma_list ')'
   35           | IF expression . THEN expression ELSE expression FI
   44           | expression . '+' expression
   45           | expression . '-' expression
   46           | expression . '*' expression
   47           | expression . '/' expression
   49           | expression . '<' expression
   50           | expression . LE expression
   51           | expression . '=' expression

    THEN  shift, and go to state 85
    LE    shift, and go to state 74
    '<'   shift, and go to state 75
    '='   shift, and go to state 76
    '+'   shift, and go to state 77
    '-'   shift, and go to state 78
    '*'   shift, and go to state 79
    '/'   shift, and go to state 80
    '@'   shift, and go to state 81
    '.'   shift, and go to state 82


state 61

   40 expression: LET error . let_args

    error  shift, and go to state 86
    IN     shift, and go to state 87
    ','    shift, and go to state 88

    let_args  go to state 89


state 62

   38 expression: LET OBJECTID . ':' TYPEID let_args
   39           | LET OBJECTID . ':' TYPEID ASSIGN expression let_args

    ':'  shift, and go to state 90


state 63

   32 expression: expression . '.' OBJECTID '(' expr_comma_list ')'
   33           | expression . '@' TYPEID '.' OBJECTID '(' expr_comma_list ')'
   36           | WHILE expression . LOOP expression POOL
   44           | expression . '+' expression
   45           | expression . '-' expression
   46           | expression . '*' expression
   47           | expression . '/' expression
   49           | expression . '<' expression
   50           | expression . LE expression
   51           | expression . '=' expression

    LOOP  shift, and go to state 91
    LE    shift, and go to state 74
    '<'   shift, and go to state 75
    '='   shift, and go to state 76
    '+'   shift, and go to state 77
    '-'   shift, and go to state 78
    '*'   shift, and go to state 79
    '/'   shift, and go to state 80
    '@'   shift, and go to state 81
    '.'   shift, and go to state 82


state 64

   32 expression: expression . '.' OBJECTID '(' expr_comma_list ')'
   33           | expression . '@' TYPEID '.' OBJECTID '(' expr_comma_list ')'
   41           | CASE expression . OF case_list ESAC
   44           | expression . '+' expression
   45           | expression . '-' expression
   46           | expression . '*' expression
   47           | expression . '/' expression
   49           | expression . '<' expression
   50           | expression . LE expression
   51           | expression . '=' expression

    OF   shift, and go to state 92
    LE   shift, and go to state 74
    '<'  shift, and go to state 75
    '='  shift, and go to state 76
    '+'  shift, and go to state 77
    '-'  shift, and go to state 78
    '*'  shift, and go to state 79
    '/'  shift, and go to state 80
    '@'  shift, and go to state 81
    '.'  shift, and go to state 82


state 65

   42 expression: NEW TYPEID .

    $default  reduce using rule 42 (expression)


state 66

   32 expression: expression . '.' OBJECTID '(' expr_comma_list ')'
   33           | expression . '@' TYPEID '.' OBJECTID '(' expr_comma_list ')'
   43           | ISVOID expression .
   44           | expression . '+' expression
   45           | expression . '-' expression
   46           | expression . '*' expression
   47           | expression . '/' expression
   49           | expression . '<' expression
   50           | expression . LE expression
   51           | expression . '=' expression

    '@'  shift, and go to state 81
    '.'  shift, and go to state 82

    $default  reduce using rule 43 (expression)


state 67

   31 expression: OBJECTID ASSIGN . expression

    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56

    expression  go to state 93


state 68

   34 expression: OBJECTID '(' . expr_comma_list ')'

    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56

    expr_comma_list  go to state 94
    expression       go to state 95


state 69

   32 expression: expression . '.' OBJECTID '(' expr_comma_list ')'
   33           | expression . '@' TYPEID '.' OBJECTID '(' expr_comma_list ')'
   44           | expression . '+' expression
   45           | expression . '-' expression
   46           | expression . '*' expression
   47           | expression . '/' expression
   49           | expression . '<' expression
   50           | expression . LE expression
   51           | expression . '=' expression
   52           | NOT expression .

    LE   shift, and go to state 74
    '<'  shift, and go to state 75
    '='  shift, and go to state 76
    '+'  shift, and go to state 77
    '-'  shift, and go to state 78
    '*'  shift, and go to state 79
    '/'  shift, and go to state 80
    '@'  shift, and go to state 81
    '.'  shift, and go to state 82

    $default  reduce using rule 52 (expression)


state 70

   32 expression: expression . '.' OBJECTID '(' expr_comma_list ')'
   33           | expression . '@' TYPEID '.' OBJECTID '(' expr_comma_list ')'
   44           | expression . '+' expression
   45           | expression . '-' expression
   46           | expression . '*' expression
   47           | expression . '/' expression
   48           | '~' expression .
   49           | expression . '<' expression
   50           | expression . LE expression
   51           | expression . '=' expression

    '@'  shift, and go to state 81
    '.'  shift, and go to state 82

    $default  reduce using rule 48 (expression)


state 71

   21 expr_semi_list: expr_semi_list . expression ';'
   22               | expr_semi_list . error ';'
   37 expression: '{' expr_semi_list . '}'

    error       shift, and go to state 96
    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '}'         shift, and go to state 97
    '('         shift, and go to state 56

    expression  go to state 98


state 72

   20 expr_semi_list: expression . ';'
   32 expression: expression . '.' OBJECTID '(' expr_comma_list ')'
   33           | expression . '@' TYPEID '.' OBJECTID '(' expr_comma_list ')'
   44           | expression . '+' expression
   45           | expression . '-' expression
   46           | expression . '*' expression
   47           | expression . '/' expression
   49           | expression . '<' expression
   50           | expression . LE expression
   51           | expression . '=' expression

    LE   shift, and go to state 74
    '<'  shift, and go to state 75
    '='  shift, and go to state 76
    '+'  shift, and go to state 77
    '-'  shift, and go to state 78
    '*'  shift, and go to state 79
    '/'  shift, and go to state 80
    '@'  shift, and go to state 81
    '.'  shift, and go to state 82
    ';'  shift, and go to state 99


state 73

   32 expression: expression . '.' OBJECTID '(' expr_comma_list ')'
   33           | expression . '@' TYPEID '.' OBJECTID '(' expr_comma_list ')'
   44           | expression . '+' expression
   45           | expression . '-' expression
   46           | expression . '*' expression
   47           | expression . '/' expression
   49           | expression . '<' expression
   50           | expression . LE expression
   51           | expression . '=' expression
   53           | '(' expression . ')'

    LE   shift, and go to state 74
    '<'  shift, and go to state 75
    '='  shift, and go to state 76
    '+'  shift, and go to state 77
    '-'  shift, and go to state 78
    '*'  shift, and go to state 79
    '/'  shift, and go to state 80
    '@'  shift, and go to state 81
    '.'  shift, and go to state 82
    ')'  shift, and go to state 100


state 74

   50 expression: expression LE . expression

    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56

    expression  go to state 101


state 75

   49 expression: expression '<' . expression

    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56

    expression  go to state 102


state 76

   51 expression: expression '=' . expression

    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56

    expression  go to state 103


state 77

   44 expression: expression '+' . expression

    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56

    expression  go to state 104


state 78

   45 expression: expression '-' . expression

    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56

    expression  go to state 105


state 79

   46 expression: expression '*' . expression

    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56

    expression  go to state 106


state 80

   47 expression: expression '/' . expression

    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56

    expression  go to state 107


state 81

   33 expression: expression '@' . TYPEID '.' OBJECTID '(' expr_comma_list ')'

    TYPEID  shift, and go to state 108


state 82

   32 expression: expression '.' . OBJECTID '(' expr_comma_list ')'

    OBJECTID  shift, and go to state 109


state 83

   11 feature: OBJECTID '(' ')' ':' TYPEID '{' expression . '}'
   32 expression: expression . '.' OBJECTID '(' expr_comma_list ')'
   33           | expression . '@' TYPEID '.' OBJECTID '(' expr_comma_list ')'
   44           | expression . '+' expression
   45           | expression . '-' expression
   46           | expression . '*' expression
   47           | expression . '/' expression
   49           | expression . '<' expression
   50           | expression . LE expression
   51           | expression . '=' expression

    LE   shift, and go to state 74
    '<'  shift, and go to state 75
    '='  shift, and go to state 76
    '+'  shift, and go to state 77
    '-'  shift, and go to state 78
    '*'  shift, and go to state 79
    '/'  shift, and go to state 80
    '@'  shift, and go to state 81
    '.'  shift, and go to state 82
    '}'  shift, and go to state 110


state 84

   12 feature: OBJECTID '(' formal_list ')' ':' TYPEID '{' . expression '}'

    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56

    expression  go to state 111


state 85

   35 expression: IF expression THEN . expression ELSE expression FI

    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56

    expression  go to state 112


state 86

   30 let_args: error . let_args

    error  shift, and go to state 86
    IN     shift, and go to state 87
    ','    shift, and go to state 88

    let_args  go to state 113


state 87

   29 let_args: IN . expression

    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56

    expression  go to state 114


state 88

   27 let_args: ',' . OBJECTID ':' TYPEID let_args
   28         | ',' . OBJECTID ':' TYPEID ASSIGN expression let_args

    OBJECTID  shift, and go to state 115


state 89

   40 expression: LET error let_args .

    $default  reduce using rule 40 (expression)


state 90

   38 expression: LET OBJECTID ':' . TYPEID let_args
   39           | LET OBJECTID ':' . TYPEID ASSIGN expression let_args

    TYPEID  shift, and go to state 116


state 91

   36 expression: WHILE expression LOOP . expression POOL
